--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
