--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "expo": "53.0.20",
+    "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -50,6 +50,7 @@
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-star-view": "^1.1.3",
     "react-native-svg": "15.11.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.20.0",
