--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.22.49",
     "react-native-paper-dropdown": "^2.3.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-progress-steps": "^2.0.3",
